# tw5-server

./: CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  config.ini  setup.cfg  setup.py  tox.ini
docker/: Dockerfile  README.rst
docker/example/: server.yaml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_tw5_server.py
tw5_server/: __init__.py  __main__.py  app.py  auth.py  cli.py  config.ini  config.py  errors.py  exceptions.py  settings.py  storage.py  utils.py  views.py
tw5_server/flask_server/: __init__.py  auth.py
tw5_server/flask_server/templates/: 401.html
tw5_server/storage/: base.py  git.py
tw5_server/templates/: 401.html  403.html  404.html
tw5_server/wiki/: __init__.py  auth.py  storage.py  utils.py  views.py
