[metadata]
name = tw5_server
version = attr: tw5_server.__version__
project_urls=
    Source Code = https://github.com/zlqm/tw5_server
    Issue Tracker = https://github.com/zlqm/tw5_server/issues/
license = BSD
author = Abraham
author_email = abraham.liu@hotmail.com
description = Tiddlyspot-like server in Python
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Utilities

[options.entry_points]
console_scripts=
    tw5-server = tw5_server.__main__:main

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
testpaths = tests
